fixed dropdown menu z-index

--- a/storestyle.css
+++ b/storestyle.css
@@ -41,7 +41,8 @@
 
 .dropdown {
     position: relative;
-    display: inline-block;
+    display: block;
+    z-index: 1;
 }
 
 .dropdown:hover {
